--- a/package.json
+++ b/package.json
@@ -5,14 +5,15 @@
     "start": "babel-node ./mro1"
   },
   "dependencies": {
-    "mathjs": "latest",
     "babel-cli": "6.26.0",
-    "babel-preset-stage-2": "6.24.1",
     "babel-preset-env": "1.6.0",
-    "lodash": "4.17.4",
+    "babel-preset-stage-2": "6.24.1",
+    "chalk": "^2.1.0",
     "is": "3.2.1",
-    "chalk" : "^2.1.0",
-    "performance-now" : "^2.1.0",
-    "moment" : "^2.19.1"
+    "lodash": "4.17.4",
+    "mathjs": "latest",
+    "moment": "^2.19.1",
+    "performance-now": "^2.1.0",
+    "plotly": "^1.0.6"
   }
 }
