--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "babel-preset-env": "1.6.0",
     "babel-preset-stage-2": "6.24.1",
     "chalk": "^2.1.0",
-    "compute-covariance": "^1.0.1",
+    "compute-covariance": "latest",
     "is": "3.2.1",
     "lodash": "4.17.4",
     "mathjs": "latest",
-    "ml-pca": "^2.1.0",
+    "ml-kernel": "^2.3.4",
     "moment": "^2.19.1",
     "numeric": "^1.2.6",
     "performance-now": "^2.1.0",
